# OpenMP_Offloading_to_SYCL_mwe

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.md.backup  hodgkin_huxley_1952_gpu_fast_monodomain.0.cpp
cmake/: test_sycl_dpcpp.cpp
data/: export_parameter.hpp
include/: hodgkin_huxley.hpp  simulation.hpp
src/: main.cpp  simulation.cpp
